DotNet/Manifold/ManifoldNative.cs

/*
 *
 * MIT License
   Copyright (c) 2024 Eli Aloni
   
   Permission is hereby granted, free of charge, to any person obtaining a copy
   of this software and associated documentation files (the "Software"), to deal
   in the Software without restriction, including without limitation the rights
   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
   copies of the Software, and to permit persons to whom the Software is
   furnished to do so, subject to the following conditions:
   
   The above copyright notice and this permission notice shall be included in all
   copies or substantial portions of the Software.
   
   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
   FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
   AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
   LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   SOFTWARE.
 */

using System;
using System.Runtime.InteropServices;

namespace Manifold
{
    public unsafe class ManifoldNative
    {
        const string NativeImport = "Urho3D";

// Polygons
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldSimplePolygon* manifold_simple_polygon(IntPtr mem, ManifoldVec2* ps,
            int length);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldPolygons* manifold_polygons(IntPtr mem, ManifoldSimplePolygon** ps,
            int length);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_simple_polygon_length(ManifoldSimplePolygon* p);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_polygons_length(ManifoldPolygons* ps);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_polygons_simple_length(ManifoldPolygons* ps, int idx);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec2 manifold_simple_polygon_get_point(ManifoldSimplePolygon* p,
            int idx);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldSimplePolygon* manifold_polygons_get_simple(IntPtr mem,
            ManifoldPolygons* ps,
            int idx);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldVec2 manifold_polygons_get_point(ManifoldPolygons* ps, int simple_idx,
            int pt_idx);

// Mesh Construction
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldMeshGL* manifold_meshgl(IntPtr mem, float* vert_props, int n_verts,
            int n_props, uint* tri_verts,
            int n_tris);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldMeshGL* manifold_meshgl_w_tangents(IntPtr mem, float* vert_props,
            int n_verts, int n_props,
            uint* tri_verts, int n_tris,
            float* halfedge_tangent);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldMeshGL* manifold_get_meshgl(IntPtr mem, ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldMeshGL* manifold_meshgl_copy(IntPtr mem, ManifoldMeshGL* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldMeshGL* manifold_meshgl_merge(IntPtr mem, ManifoldMeshGL* m);


        // Manifold Vectors
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifoldVec* manifold_manifold_empty_vec(IntPtr mem);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifoldVec* manifold_manifold_vec(IntPtr mem, int sz);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_manifold_vec_reserve(ManifoldManifoldVec* ms, int sz);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_manifold_vec_length(ManifoldManifoldVec* ms);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_manifold_vec_get(IntPtr mem, ManifoldManifoldVec* ms,
            int idx);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_manifold_vec_set(ManifoldManifoldVec* ms, int idx,
            ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_manifold_vec_push_back(ManifoldManifoldVec* ms,
            ManifoldManifold* m);

// Manifold Booleans
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_boolean(IntPtr mem, ManifoldManifold* a,
            ManifoldManifold* b, ManifoldOpType op);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_batch_boolean(IntPtr mem, ManifoldManifoldVec* ms,
            ManifoldOpType op);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_union(IntPtr mem, ManifoldManifold* a,
            ManifoldManifold* b);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_difference(IntPtr mem, ManifoldManifold* a,
            ManifoldManifold* b);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_intersection(IntPtr mem, ManifoldManifold* a,
            ManifoldManifold* b);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifoldPair manifold_split(IntPtr mem_first, IntPtr mem_second,
            ManifoldManifold* a, ManifoldManifold* b);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifoldPair manifold_split_by_plane(IntPtr mem_first, IntPtr mem_second,
            ManifoldManifold* m,
            double normal_x, double normal_y,
            double normal_z, double offset);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_trim_by_plane(IntPtr mem, ManifoldManifold* m,
            double normal_x, double normal_y,
            double normal_z, double offset);


        // 3D to 2D
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldPolygons* manifold_slice(IntPtr mem, ManifoldManifold* m, double height);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldPolygons* manifold_project(IntPtr mem, ManifoldManifold* m);

// Convex Hulls
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_hull(IntPtr mem, ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_batch_hull(IntPtr mem, ManifoldManifoldVec* ms);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_hull_pts(IntPtr mem, ManifoldVec3* ps, int length);

// Manifold Transformations
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_translate(IntPtr mem, ManifoldManifold* m, double x,
            double y, double z);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_rotate(IntPtr mem, ManifoldManifold* m, double x,
            double y, double z);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_scale(IntPtr mem, ManifoldManifold* m, double x,
            double y, double z);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_transform(IntPtr mem, ManifoldManifold* m, double x1,
            double y1, double z1, double x2, double y2,
            double z2, double x3, double y3, double z3,
            double x4, double y4, double z4);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_mirror(IntPtr mem, ManifoldManifold* m, double nx,
            double ny, double nz);

        // public static extern ManifoldManifold *manifold_warp(IntPtr mem, ManifoldManifold *m,
        //                         ManifoldVec3 (*fun)(double, double, double,
        //                                             IntPtr ),
        //                         IntPtr ctx);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_smooth_by_normals(IntPtr mem, ManifoldManifold* m,
            int normalIdx);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_smooth_out(IntPtr mem, ManifoldManifold* m,
            double minSharpAngle,
            double minSmoothness);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_refine(IntPtr mem, ManifoldManifold* m, int refine);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_refine_to_length(IntPtr mem, ManifoldManifold* m,
            double length);


        // Manifold Shapes / Constructors
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_empty(IntPtr mem);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_copy(IntPtr mem, ManifoldManifold* m);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_tetrahedron(IntPtr mem);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_cube(IntPtr mem, double x, double y, double z,
            int center);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_cylinder(IntPtr mem, double height, double radius_low,
            double radius_high, int circular_segments,
            int center);

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern ManifoldManifold* manifold_sphere(IntPtr mem, double radius,
            int circular_segments);
